k8s-new/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auction
  labels:
    name: auction
    app: auction-microservices
---
